# bitkv-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
benches/: kv_bench.rs
ci/: miri.sh  sanitizer.sh
examples/: basic_operations.rs
http/: Cargo.toml
http/src/: main.rs  test.rs
src/: batch.rs  db.rs  db_test.rs  dbtest.rs  errors.rs  iterator.rs  lib.rs  merge.rs  option.rs
src/data/: data_file.rs  log_record.rs  mod.rs
src/fio/: file_io.rs  mmap.rs  mod.rs
src/index/: bptree.rs  btree.rs  mod.rs  skiplist.rs
src/util/: file.rs  mod.rs  rand_kv.rs
