[package]
name = "bitkv-rs"
version = "0.2.1"
authors = ["kevin zhang <kaiqiz07@gmail.com>"]
description = "A simple k/v store API inspired by bitcask"
edition = "2021"

[[example]]
name = "basic_operations"
path = "examples/basic_operations.rs"

[dependencies]
bytes = "1.5.0"
env_logger = "0.11.2"
log = "0.4.21"
parking_lot = "0.12.1"
thiserror = "1.0.57"
prost = "0.12.3"
crc32fast = "1.4.0"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"